# cmd/server/main.go
@@ -35,6 +35,7 @@ func main() {
 
 	mux.Handle("POST /tasks", auth(http.HandlerFunc(gormRepository.Create())))
 	mux.Handle("GET /tasks", auth(http.HandlerFunc(gormRepository.ListTasks())))
+	mux.Handle("GET /tasks/{id}", auth(http.HandlerFunc(gormRepository.GetTask())))
 
 	// http://127.0.0.1:8080/swagger/index.html
 	mux.HandleFunc("/swagger/", httpSwagger.WrapHandler)
